# WebGrader

./: README.md  defi.py  grader.py  pyproject.toml  requirements.txt
.github/workflows/: run_grader.yml
WebGrader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
