[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WebGrader"
version = "0.1.0"
description = "A simple tool to rate website security, speed, SEO, and credibility."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "beautifulsoup4",
]

[project.scripts]
webg = "grader:main"
